# hist-in-situ

./: CMakeLists.txt  README.txt  execute.c  histogram.c  histogram.h  histogram_in.h  histogram_m.f90  main.f90  modules_m.f90  profiler.c  profiler.h  profiler_m.f90  tracer_m.f90  tracers_sorted_output.c
data/tracer-0.0000E+00/: sortedtraceroffsets.00000
input/: histogram.in
tests/: test_histogram.c  test_mpi_tracer.f90  test_tracer.f90  test_write_histograms_grouped_by_mpi_comm.c
